
Changelog
=========

4.0.5 (unreleased)
------------------

- Nothing changed yet.


4.0.4 (2014-11-13)
------------------

- Extract attachments view: fixed icon display in attachment listing.
  [phgross]

- Disable paste action for mails.
  [phgross]

- Set proper Content-Type header in responses from LDAP control panel views.
  [lgraf]

- Fix Unicode handling in OGDSUpdater.
  [lgraf]


4.0.3 (2014-11-10)
------------------

- Dossier responsible field: use current admin unit's user, instead of only
  current orgunit's one.
  [phgross]

- Forwarding Transitioncontroller: Fixed assign_to_dossier check.
  [phgross]

- Fixed mail download for mails with already CRLF.
  [phgross]

- Add new type Inbox Container.
  [phgross]

- Task byline: Use adminUnit abbreviation instead of label for sequence_number display.
  [phgross]


4.0.2 (2014-11-03)
------------------

- Fixed version download, when download confirmation is deactivated.
  [phgross]

- Mail Download: Convert LF to CRLF, to avoid displaing problems in MS Outlook.
  [phgross]

- Fixed UnicodeEncodeError in task link generation.
  [phgross]


4.0.1 (2014-10-27)
------------------

- Harmonize column lengths of groupid and userid columns.
  [phgross]


4.0.0 (2014-10-26)
------------------

- Changes to OGDS [phgross, deiferni]:

  - Replace `ContactInformation` utility with a service implemetation, available as `ogds_service`.
  - Update to latest `opengever.ogds.models` version.

  - Fixed encoding issues in the `EmailContactsAndUsersVocabularyFactory`.


- Replace Clients with OrgUnit/AdminUnit [phgross, deiferni]:

  - Remove one-to-one relationships of `PloneSite` and `Client` by introducting `AdminUnit` and `OrgUnit`.
  - An `AdminUnit` corresponds to one `PloneSite`.
  - An `AdminUnit` has a one-to-many relationship to `OrgUnit`.
  - Add utility functions to access the current `OrgUnit` and `AdminUnit`.
  - Add org-unit selector to switch between the user`s assigned org-units.