@@ -5,7 +5,8 @@ Changelog
 4.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Extract attachments view: Fixed contenttype helper when lookup via filename.
+  [phgross]
 
 
 4.0.4 (2014-11-13)
